# BanRec

./: CMakeLists.txt  README.md  README_NEW_ARCH.md  main.c  main_example.c  rec_config.h
api/: rec_api.c  rec_api.h  rec_test.c  rec_test.h
bulid/: BanRec  CMakeCache.txt  Makefile  cmake_install.cmake
core/: rec_core.c  rec_core.h  rec_err_handle.c  rec_err_handle.h
hal/input_handle/: input_handle.c  input_handle.h
hal/play/: play.c  play.h
interface/: rec_interface.c  rec_interface.h
